<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.school.toolinfodoc.Principal">

    <controles.AutoResizeTextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/lblNombre"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"/>

    <Button
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/btnMenu"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/iconomenu"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblNombre">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TabHost
                android:id="@+id/tabhost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:id="@+id/tab1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:id="@+id/relContacts"
                                android:background="#70000000"
                                android:layout_marginTop="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:id="@+id/lblDocentes"
                                    android:text="@string/docentes"
                                    android:gravity="center_horizontal|center_vertical"
                                    android:textAlignment="gravity"
                                    android:textColor="#000000"
                                    android:textStyle="bold|italic"
                                    android:textSize="16sp"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginStart="5dp"/>

                                <Spinner
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/cboContactos"
                                    android:layout_toRightOf="@+id/lblDocentes"
                                    android:layout_toEndOf="@+id/lblDocentes"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginStart="5dp"
                                    android:background="#60FFFFFF">

                                </Spinner>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/relMensajes"
                                android:layout_below="@id/relContacts">

                                <Button
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:id="@+id/btnEnviarMensaje"
                                    android:layout_alignParentBottom="true"
                                    android:layout_alignParentRight="true"
                                    android:layout_alignParentEnd="true"
                                    android:layout_marginBottom="15dp"
                                    android:layout_marginRight="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:background="@drawable/send_message_icon"/>

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txtMensaje"
                                    android:minHeight="50dp"
                                    android:maxHeight="50dp"
                                    android:minLines="1"
                                    android:background="@drawable/bg_edittext_icon"
                                    android:inputType="textMultiLine"
                                    android:drawableLeft="@drawable/keyboard_icon"
                                    android:drawableStart="@drawable/keyboard_icon"
                                    android:drawablePadding="10dp"
                                    android:paddingLeft="3dp"
                                    android:paddingStart="3dp"
                                    android:paddingRight="50dp"
                                    android:paddingEnd="50dp"
                                    android:paddingTop="5dp"
                                    android:paddingBottom="5dp"
                                    android:textColor="#000000"
                                    android:textColorHint="#898989"
                                    android:hint="@string/escriba_su_mensaje"
                                    android:layout_alignBaseline="@+id/btnEnviarMensaje"
                                    android:layout_alignBottom="@+id/btnEnviarMensaje"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentStart="true"
                                    android:scrollbars="vertical"
                                    android:layout_alignParentRight="true"
                                    android:layout_alignParentEnd="true" />

                                <ListView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/lvMensajes"
                                    android:background="#20000000"
                                    android:dividerHeight="0dp"
                                    android:layout_alignParentTop="true"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentStart="true"
                                    android:layout_above="@+id/txtMensaje"
                                    android:layout_marginBottom="5dp"
                                    android:paddingTop="5dp">

                                </ListView>
                            </RelativeLayout>

                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/tab2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:id="@+id/relOpcionesCalendario"
                                android:background="#70000000"
                                android:layout_marginTop="10dp">

                                <RadioGroup
                                    android:layout_width="fill_parent"
                                    android:layout_height="25dp"
                                    android:id="@+id/rgroupOpcionesCalendario"
                                    android:orientation="horizontal"
                                    android:weightSum ="1">

                                    <RadioButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/esta_semana"
                                        android:id="@+id/rbtnEstaSemana"
                                        android:textColor="#000000"
                                        android:textStyle="bold|italic"
                                        android:checked="true"
                                        android:textAllCaps="true" />

                                    <RadioButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/este_mes"
                                        android:id="@+id/rbtnEsteMes"
                                        android:textColor="#000000"
                                        android:textStyle="bold|italic"
                                        android:textAllCaps="true" />

                                    <RadioButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/este_año"
                                        android:id="@+id/rbtnEsteAnio"
                                        android:textColor="#000000"
                                        android:textStyle="bold|italic"
                                        android:checked="false"
                                        android:duplicateParentState="false"
                                        android:textAlignment="center"
                                        android:textAllCaps="true" />
                                </RadioGroup>

                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_height="fill_parent"
                                android:layout_width="fill_parent"
                                android:layout_centerInParent="true"
                                android:id="@+id/emptyView"
                                android:visibility="gone">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/listview_empty_content"
                                    android:gravity="center_horizontal|center_vertical"
                                    android:layout_centerInParent="true"
                                    android:id="@+id/imgEmpty"
                                    android:contentDescription="@string/app_name"/>

                                <controles.AutoResizeTextView
                                    android:layout_width="match_parent"
                                    android:textColor="#6E6E6E"
                                    android:layout_height="wrap_content"
                                    android:textSize="26sp"
                                    android:gravity="center_horizontal|center_vertical"
                                    android:textAlignment="gravity"
                                    android:layout_below="@+id/imgEmpty"
                                    android:textStyle="bold|italic"
                                    android:id="@+id/lblSinEventos"/>
                            </RelativeLayout>

                            <ListView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/lvCalendario"
                                android:background="#20000000"
                                android:layout_below="@+id/relOpcionesCalendario">

                            </ListView>

                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
            </TabHost>
        </RelativeLayout>

        <ListView
            android:id="@+id/lvMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/backrepeat"
            android:textColor="#424242"
            android:choiceMode="singleChoice"
            android:divider="#2E2E2E"
            android:dividerHeight="2dp"/>
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>
